# menuCpp

./: .gitignore  CMakeLists.txt  README.md  athmostConfig.h.in  common.h  main.cpp  problema.txt  storage.json
app/: app.cpp  app.h
data/: data.cpp  data.h
ui/: ui.cpp  ui.h
